# gtfs-dublin

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPROVEMENTS.md  Makefile  README.md  SIMPLIFICATION_PLAN.md  docker-compose.yml  pyproject.toml  update_gtfs.py
GTFS_Realtime/: calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt
docs/: home-assistant.md
gtfs_core/: __init__.py  formatting.py  gtfs_loader.py  transport_api.py
gtfs_dublin/: __init__.py  __main__.py  transport_api_server.py
mcp-server/: .env  README.md  main.py  pyproject.toml  test_setup.py
scripts/: README.md  ensure_gtfs_data.sh  update-gtfs-monthly.sh
tests/: test_formatting.py  test_gtfs_loader.py  test_new_features.py  test_transport_api.py
