[project]
name = "gtfs-dublin"
version = "0.1.0"
description = "A Python API and MCP server for working with Dublin GTFS and GTFS-RT data."
authors = [
    {name = "Aidan Boland"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "starlette>=0.49.1",
    "uvicorn>=0.35.0",
    "gtfs-realtime-bindings>=1.0.0",
    "requests>=2.32.4",
    "python-dotenv>=1.2.1",
]

[tool.uv.workspace]
members = ["mcp-server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.2",
    "pytest>=8.4.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by ruff format
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["B011"]  # assert false

[tool.ruff.format]
# Uses line-length from [tool.ruff] above

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "google.transit.gtfs_realtime_pb2",
    "requests",
]
ignore_missing_imports = true

